--- a/src/layouts/_base.pug
+++ b/src/layouts/_base.pug
@@ -9,31 +9,22 @@ html(lang='en')
   body
     
     header
-      mixin list(x)
-        each item in x
-          if (item.type == 'file')
-            - item.path = item.path.replace('.md', '.html')
-            - item.name = item.name.replace('.md', '')
-            - item.name = item.name.replace('index', 'home')
-            div: a(href=item.path) #{item.name}
-          else if (item.type == 'folder')
-            div.subfolder
-              h3 #{item.name}
-              +list(item.children)
           
       nav(role="navigation" aria-labelledby="firstLabel")
         h2(span id="firstLabel" class="hidden") Menu
-        +list(contentMenu)
-        div: a(href="https://dashboard.datocms.com/") CMS
+        each item in contentMenu.children
+          - item.path = item.path.replace('.md', '.html')
+          - item.title = item.title.replace('.md', '')
+          - item.title = item.title.replace('index', 'Home')
+          div: a(href=item.path) #{item.title}
         
         
-    block page
+    main: block page
       
     app-footer(generator=generator url=url)
     
     script(type="text/javascript")
       include ../../node_modules/riot/riot+compiler.min.js
-      // TODO load prismic
     
     script(type="riot/tag" data-src="assets/main.tag.js")
       
