adds header css (checkpoint)

--- a/src/layouts/_base.pug
+++ b/src/layouts/_base.pug
@@ -9,7 +9,11 @@ html(lang='en')
   body
     
     header
-          
+      img.logo(src="/media/logo.svg")
+      h1 #Unser Herrlesbergladen
+      
+    aside
+      
       nav(role="navigation" aria-labelledby="firstLabel")
         h2(span id="firstLabel" class="hidden") Menu
         each item in contentMenu.children
