--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,6 +1,9 @@
-@import "normalize"
+$colorPrimary: #ffeb3b
+
+@import "reset"
 @import "milligram.min"
-@import "nav"
+@import "header"
+@import "sidemenu"
 
 body
   padding: 1rem
