--- a/src/layouts/_base.pug
+++ b/src/layouts/_base.pug
@@ -14,11 +14,12 @@ html(lang='en')
       h2(id="menuTitle") Menü
       
       nav(role="navigation" aria-labelledby="menuTitle")
-        each item in contentMenu.children
-          - item.path = item.path.replace('.md', '.html')
-          - item.title = item.title.replace('.md', '')
-          - item.title = item.title.replace('index', 'Home')
-          div: a(href=item.path) #{item.title}
+        ul
+          each item in contentMenu.children
+            - item.path = item.path.replace('.md', '.html')
+            - item.title = item.title.replace('.md', '')
+            - item.title = item.title.replace('index', 'Home')
+            li: a(href=item.path) #{item.title}
           
       app-footer(generator=generator url=url)
         
