--- a/src/style/_header.sass
+++ b/src/style/_header.sass
@@ -5,7 +5,7 @@
   align-items: center
   text-align: center
   padding: 1em
-  background: $colorPrimary
+  background: $colorSecondary
 
   @media (min-width: $md)
     padding-right: 1em
