--- a/src/style/_header.sass
+++ b/src/style/_header.sass
@@ -6,6 +6,7 @@
   text-align: center
   padding: 1em
   background: $colorSecondary
+  border-bottom: 3px solid
 
   @media (min-width: $md)
     padding-right: 1em
