--- a/src/style/_sidemenu.sass
+++ b/src/style/_sidemenu.sass
@@ -3,8 +3,8 @@ aside.menu
   right: 0
   top: 0
   height: 100vh
-  color: lighten($colorSecondary, 30%)
-  background-color: darken($colorPrimary, 30%)
+  color: $contrastPrimary
+  background-color: $contrastSecondary
   width: 75%
   max-width: 30em
   padding: 1rem
@@ -15,13 +15,17 @@ aside.menu
   flex-flow: column
   justify-content: space-between
 
+  h2, nav
+    padding: 1em 10%
+    border-bottom: 3px solid
+
   @media (min-width: $md)
     position: static
     transform: translate(0)
 
   &.open
     transform: translate(0)
-    box-shadow: 0 0 2rem 0rem opacify($colorContrast, 0.75)
+    box-shadow: 0 0 2rem 0rem opacify($contrastSecondary, 0.75)
 
     @media (min-width: $md)
       box-shadow: none
@@ -36,14 +40,15 @@ aside.menu
     @media (min-width: $md)
       display: none
 
-  h2
-    align-self: center
-
   nav
     flex: 1
     overflow: auto
-    padding: 1em 0
     margin-bottom: 1em
 
-    a
-      line-height: 3
+    ul
+      margin: 0
+      list-style: none
+
+      a
+        line-height: 3
+        font-size: 111%
