--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,8 +1,9 @@
 // green
-$colorPrimary:  #558b2f
+$colorPrimary:      #558b2f
 //yellow
 $colorSecondary:    #ffeb3b
-$colorContrast:   #212121
+$contrastPrimary:  lighten($colorSecondary, 30%)
+$contrastSecondary: darken($colorPrimary, 30%)
 
 //mobile first:
 //everything without media query works for mobile
@@ -11,7 +12,6 @@ $lg: 80rem
 $xl: 120rem
 
 // LIBRARIES
-//@import "reset"
 // @import "milligram.min"
 @import "amazium"
 
@@ -32,7 +32,9 @@ $xl: 120rem
 body.root
   margin: 0
   padding: 0
+  font-family: Roboto,Helvetica Neue,Helvetica,Arial,sans-serif
   color: $colorPrimary
+  background: #F5F5F5
 
   @media (min-width: $md)
     flex-flow: row-reverse nowrap
@@ -40,12 +42,18 @@ body.root
   h1, h2, h3, h4
     padding-top: 1em
 
-  li
-    list-style-position: outside
-    margin-left: 2em
+  a
+    //increase click size
+    padding: 1em
+    margin: -1em
 
-    &:focus, &:hover
-      color: darken($colorPrimary, 10%)
+    @media (min-width: $md)
+      padding: inherit
+      margin: inherit
+
+      &:focus, &:hover
+        color: darken($colorPrimary, 10%)
+        background: white
 
   blockquote
     margin: 1em
@@ -53,6 +61,8 @@ body.root
     border-left: solid #ddd 0.5em
 
   p
+    line-height: 2
+
     img
       max-width: 100%
 
@@ -63,6 +73,8 @@ body.root
 
     main
       padding: 1rem
+      max-width: 60em
+      margin: 0 auto
 
   // MODULES
   @import "header"
