reaches style milestone

--- a/src/layouts/_base.pug
+++ b/src/layouts/_base.pug
@@ -25,7 +25,7 @@ html(lang='en')
         
         
     main.wrapper.grid
-      header
+      header: div
         if (logo)
           img.logo(src=logo.imageUrl)
         h1 #{mainTitle}
