fixes assets path
https://github.com/gitbreaker222/herrlesberg-demo-website/projects/1#card-4547730

--- a/src/layouts/_base.pug
+++ b/src/layouts/_base.pug
@@ -36,7 +36,7 @@ html(lang='en')
     script(type="text/javascript")
       include ../../node_modules/riot/riot+compiler.min.js
     
-    script(type="riot/tag" data-src="assets/main.tag.js")
+    script(type="riot/tag" data-src="/assets/main.tag.js")
       
       
     script.
