reduces menu toggle button

--- a/src/layouts/_base.pug
+++ b/src/layouts/_base.pug
@@ -9,7 +9,7 @@ html(lang='en')
   
   body.root.row--fluid
     aside.menu.grid-9.grid-3-tablet
-      button.toggle.btn(onclick="app.toggleMenu()") Menü 🠶
+      button.toggle.btn(onclick="app.toggleMenu()") 🠶
       
       h2(id="menuTitle") Menü
       
