removes header shadow + less line height p

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -58,11 +58,17 @@ body.root
     border-left: solid #ddd 0.5em
 
   p
-    line-height: 2
+    line-height: 1.5
 
     img
       max-width: 100%
 
+  time
+    display: inline-block
+    margin-bottom: 1rem
+    color: $colorPrimary
+
+  // MAIN BOX
   .wrapper
     padding: 0
     height: 100vh
