--- a/src/style/_header.sass
+++ b/src/style/_header.sass
@@ -19,7 +19,7 @@
       margin: 0
       padding: 0
       font-size: 2.8em
-      text-shadow: $textShadow
+      font-weight: 500
 
     button.toggle
       @media (min-width: $md)
