adds layout name to body

--- a/src/layouts/_base.pug
+++ b/src/layouts/_base.pug
@@ -7,7 +7,7 @@ html(lang='en')
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
     link(rel="stylesheet" href="/assets/main.css")
   
-  body.root.row--fluid
+  body.root.row--fluid(class=layout)
     aside.menu.grid-9.grid-3-tablet
       button.toggle.btn(onclick="app.toggleMenu()") 🠶
       
