reduces header link styling

--- a/src/style/_header.sass
+++ b/src/style/_header.sass
@@ -21,6 +21,12 @@
       font-size: 2.8em
       font-weight: 500
 
+      a
+        text-decoration: none
+
+        &:hover
+          background: none
+
     button.toggle
       @media (min-width: $md)
         display: none
