wrapps text in paragraphs + add CMS link to footer

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -37,6 +37,7 @@ button
   border-color: currentColor
 p
   max-width: 40em
+  white-space: pre-line
 blockquote
   font-style: italic
   padding: 1em
@@ -120,6 +121,10 @@ body
 
         p img
           @extend .block-center
+
+    footer
+      p
+        margin-bottom: 1em
 
 
 // ==========================================================================
